--- a/contactUs.html
+++ b/contactUs.html
@@ -22,7 +22,7 @@
 	</div> 
 </div>
 <div class = "topnav">
-	<a href="WDH2.html">Home</a>
+	<a href="index.html">Home</a>
 	<a href="aboutTheClinic.html">Services Here</a>
 	<a href="FAQ.html">FAQ</a>
 	<a class = "active" href="#home">Contact Us</a>
