--- a/aboutTheClinic.html
+++ b/aboutTheClinic.html
@@ -20,7 +20,7 @@
 	</div> 
 </div>
 <div class = "topnav">
-	<a href="WDH2.html">Home</a>
+	<a href="index.html">Home</a>
 	<a class = "active" href="#home">Services Here</a>
 	<a href="FAQ.html">FAQ</a>	
 	<a href="contactUs.html">Contact Us</a>
