--- a/FAQ.html
+++ b/FAQ.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+x<!DOCTYPE html> 
 
 <html lang="en-US">
 <head>
@@ -14,14 +14,14 @@
 <body>
 
 <div class = "baner-image" >
-	<a href="WDH2.html"><img src="Logo Only.png" height= "15%" width="15%" ></a>
+	<a href="index.html"><img src="Logo Only.png" height= "15%" width="15%" ></a>
 	<div class = "baner-text"> 
 		<h1>Weekend Dental Hygiene Clinic </h1>
         <h2 style="text-align:center; font-stretch: expanded; color: #99e699"><span style="font-size: 1.5em">Judy:</span> "Take care of your teeth and they'll take care of you"</h2>		
 	</div> 
 </div>
 <div class = "topnav">
-	<a href="WDH2.html">Home</a>
+	<a href="index.html">Home</a>
 	<a href="aboutTheClinic.html">Services Here</a>
     <a class = "active" href="#FAQ">FAQ</a>	
 	<a href="contactUs.html">Contact Us</a>
