--- a/aboutTheClinic.html
+++ b/aboutTheClinic.html
@@ -13,7 +13,7 @@
 <body> 
 
 <div class = "baner-image" >
-	<a href="WDH2.html"><img src="Logo Only.png" height= "15%" width="15%" ></a>
+	<a href="index.html"><img src="Logo Only.png" height= "15%" width="15%" ></a>
 	<div class = "baner-text"> 
 		<h1>Weekend Dental Hygiene Clinic </h1>
         <h2 style="text-align:center; font-stretch: expanded; color: #99e699"><span style="font-size: 1.5em">Judy:</span> "Take care of your teeth and they'll take care of you"</h2>		
