--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ She always behaves in a manner that is consistent with the knowledge, skills, at
 While off duty, Judy enjoys gardening, cooking and spending quaility time with family and friends </p>
 </p></td>
 <td style="width:20%; text-align: center; color: #248f24; font-weight: bold;">
-<img src="portrate3.jpg" width="300px"  style="border-radius: 50%;">			
+<img src="portrate3.JPG" width="300px"  style="border-radius: 50%;">			
 			<h3>registered dental hygienest</h3> 	
 </td></tr>
 <tr><td></td><td style="text-align: center;"> <h1 style="color:#800000; font-size: 2.1em">Canadian Dental Care Plan </br><span class="slogon1">patient accept</span></h1></td><td></td></tr>
