--- a/aboutTheClinic.html
+++ b/aboutTheClinic.html
@@ -43,7 +43,7 @@
 			</ul>
 	 </div>
 	<div class= "google-map">
-    <img src="portrate2.jpg" width="400px" style = " border-radius:10%; padding: 60px;">	
+    <img src="portrate2.JPG" width="400px" style = " border-radius:10%; padding: 60px;">	
 	
 	</div>
 </div>
