--- a/FAQ.html
+++ b/FAQ.html
@@ -34,16 +34,18 @@
 	<div style="text-align:center; color:#248f24;"><h1>Frequently Asked Questions</h1></div>
 	<button class="accordion">May I get services in Weekend Dental Hygiene if I do not have any dental insurance?</button>
 	<div class="panel"> 
-	<p>You can get dental hygiene service here with a reasonable charge of cash when you don't have any dental insurance, or when you want to have a hygiene service after claiming maxuim units debridement.</p>
+	<p>You can get dental hygiene service here at reasonable discounted price.</p>
 	</div>
 	
-	<button class="accordion">What is a dental hygienest supposed to do in the process of service?</button>
+	<button class="accordion">What does a dental hygien appointment include?</button>
 	<div class="panel"> 
-	<p>Dental hygienest is a registered oral health professional who performs a variety of roles including clinical therapy,
-health promotion, education, administration and research in a variety of practice environments. In all roles and
-practice environments, the dental hygienist works collaboratively with the client and other health professionals
-and, using a problem-solving framework, bases all decisions, judgments and interventions on current evidencebased research and theory. As a registrant of a self-regulated profession, a dental hygienist must practise safely,
-ethically and effectively for the promotion of the oral health and well-being of the public in Ontario.</p>
+	<p>
+		A typical dental hygiene appointment would include services such as:
+		<ul><li>Dental examination
+		</li><li>Teeth cleaning and polishing
+		</li><li>X-ray if needed
+		</li><li>Flouride Treatment (Optional)</li>
+	</p>
 	</div>
 	
 	<button class="accordion">How often should I go for a dental hygiene?</button>
