--- a/FAQ.html
+++ b/FAQ.html
@@ -44,7 +44,7 @@
 		<ul><li>Dental examination
 		</li><li>X-ray if needed
 		</li><li>Teeth cleaning and polishing		
-		</li><li>Flouride Treatment (Optional)</li>
+		</li><li>Flouride treatment (optional)</li>
 		</ul>
 	</p>
 	</div>
