--- a/FAQ.html
+++ b/FAQ.html
@@ -51,59 +51,28 @@
 	
 	<button class="accordion">How often should I go for a dental hygiene?</button>
 	<div class="panel"> 
-	<p>The Canadian Dental Association (CDA) recommends that you get a dental exam and cleaning at least every six months. However, the frequency of your dental visits depends on several factors, including: 
-<ul><li>Oral health: If you're prone to gum disease or cavities, you may need to see your dentist more often. For example, people with gum disease often see their dentist every three to four months. 
-</li><li>Age: Your age may be a factor in how often you should visit the dentist. 
-</li><li>Risk factors: Other risk factors may also affect how often you should visit the dentist.</li>
+	<p>The Canadian Dental Association (CDA) recommends that you get a dental exam and cleaning at least every three to six months. The frequency of your dental visits depends on several factors, including: 
+<ul><li>Oral health: If you're prone to gum disease or cavities, you may need visit your dental hygienis more often.
+</li><li>Age: Your age may be a factor in how often you should get your teeth cleaned. 
+</li><li>Risk factors: Other risk factors may also affect how often you should visit the dental hygienist.</li>
 </ul> 
 In addition to regular dental cleanings, you should also: 
 <ul><li>Brush your teeth at least twice a day or after every meal 
 </li><li>Floss at least once a day or after every meal 
 </li><li>Maintain good oral hygiene to keep germs under control</li></ul> 
-You should also talk to your dentist if you develop any new or concerning symptoms, such as: toothache, bleeding gums, and loose teeth.</p>
+</p>
 	</div>
 	
-	<button class="accordion">How soon can I make an appointment for dental hygiene?</button>
+	<button class="accordion">How soon can I make a dental hygiene appointment?</button>
 	<div class="panel"> 
-	<p>It depends on how many patients have reserved services already for the coming days. Usualy, Judy can serve you at the coming weekend if you call us 3 or 4 days in advance.</p>
+	<p>Typically we can schedule you in if you call us three to four days prior to the weekends.</p>
 	</div>
 	
 	<button class="accordion">Am I eligible for Canada Dental Care Plan?</button>
 	<div class="panel">
-	<p>The Canada Dental Care Plan (CDCP) is a federal initiative aimed at providing dental coverage to Canadians who lack access to private insurance. The eligibility criteria for the CDCP are outlined to help low- and middle-income families access dental care. Here's a breakdown of who is eligible:
-
-<h3>Eligibility Criteria</h3>
-<h4>1.Income Threshold:</h4>
-
-Individuals or families with an annual income below a certain threshold. The threshold is typically adjusted for family size and economic conditions, with lower-income households prioritized.
-
-<h4>2.Lack of Private Insurance:</h4>
-
-<ul><li>Those who do not have access to private dental insurance.</li>
-<li>Individuals covered under public programs may have partial eligibility, depending on overlap with provincial plans.</li></ul>
-
-<h4>3.Age and Demographics:</h4>
-<ul><li>
-Initial phases focus on children under 12 years old (as of 2022-2023).</li>
-<li>Expansion to include teenagers under 18, seniors, and persons with disabilities is planned in subsequent phases.</li></ul>
-
-<h4>4.Tax and Residency Requirements:</h4>
-
-Must be a resident of Canada and have filed a recent income tax return to confirm income eligibility.
-<h4>5.No Duplication with Provincial Plans:</h4>
-
-The plan does not replace existing provincial dental coverage. It acts as a supplementary measure for services not covered by provincial or territorial programs.
-<h3>What Is Covered?</h3>
-The plan typically includes:
-<ul><li>
-Basic dental services: cleanings, fillings, and x-rays.</li>
-<li>Preventive care.</li>
-<li>Emergency procedures.</li></ul>
-
-<h3>How to Apply:</h3>
-<ul><li>Applications are processed through the Canada Revenue Agency (CRA).</li>
-<li>Proof of income and lack of insurance may be required during the application process.</li></ul>
-</div>	
+	<p>The Canada Dental Care Plan (CDCP) is a federal initiative aimed at providing dental coverage to Canadians who lack access to private insurance. The eligibility criteria for the CDCP are outlined to help low- and middle-income families access dental care. Please click the relative link <a>CDCP</a> to see the eligibility
+	</p>
+	</div>
 </div>
 
 <script>
