--- a/FAQ.html
+++ b/FAQ.html
@@ -65,7 +65,7 @@ In addition to regular dental cleanings, you should also:
 	
 	<button class="accordion">How soon can I make a dental hygiene appointment?</button>
 	<div class="panel"> 
-	<p>Typically we can schedule you in if you call us three to four days prior to the weekends.</p>
+	<p>All dental hygiene visits are by appointments only. Typically we can schedule you in if you call us at least one week in advancce.</p>
 	</div>
 	
 	<button class="accordion">Am I eligible for Canada Dental Care Plan?</button>
