--- a/FAQ.html
+++ b/FAQ.html
@@ -70,7 +70,7 @@ In addition to regular dental cleanings, you should also:
 	
 	<button class="accordion">Am I eligible for Canada Dental Care Plan?</button>
 	<div class="panel">
-	<p>The Canada Dental Care Plan (CDCP) is a federal initiative aimed at providing dental coverage to Canadians who lack access to private insurance. The eligibility criteria for the CDCP are outlined to help low- and middle-income families access dental care. Please click the relative link <a href="https://www.canada.ca/en/services/benefits/dental/dental-care-plan.html" target="new">CDCP</a> to see the eligibility
+	<p>The Canada Dental Care Plan (CDCP) is a federal initiative aimed at providing dental coverage to Canadians who lack access to private insurance. The eligibility criteria for the CDCP are outlined to help low- and middle-income families access dental care. Please click the relative link <a href="https://www.canada.ca/en/services/benefits/dental/dental-care-plan.html" target="new">Canada Dental Care Plan (CDCP)</a> to see the eligibility
 	</p>
 	</div>
 </div>
